--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "bootstrap": "4.1.1",
+    "current-week-number": "^1.0.7",
     "ngx-bootstrap": "^5.3.2",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.4",
