--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "4.1.1",
     "current-week-number": "^1.0.7",
     "ngx-bootstrap": "^5.3.2",
+    "ngx-bootstrap-modal": "^2.0.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.4",
     "rxjs": "~6.4.0",
