--- a/src/web.config
+++ b/src/web.config
@@ -12,4 +12,6 @@
       </rule> 
     </rules> 
   </rewrite> 
+  <customErrors mode="Off" />
+  <httpErrors errorMode="Detailed"></httpErrors>
 </system.webServer> 
