--- a/src/web.config
+++ b/src/web.config
@@ -1,17 +1,16 @@
-<?xml version="1.0"?>
-<system.webServer> 
-  <rewrite> 
-    <rules> 
-      <rule name="Angular Routes" stopProcessing="true"> 
-        <match url=".*" /> 
-          <conditions logicalGrouping="MatchAll"> 
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" /> 
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" /> 
-          </conditions> 
-        <action type="Rewrite" url="/" /> 
-      </rule> 
-    </rules> 
-  </rewrite> 
-  <customErrors mode="Off" />
-  <httpErrors errorMode="Detailed"></httpErrors>
-</system.webServer> 
+<configuration>
+<system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Main Rule" stopProcessing="true">
+                <match url=".*" />
+                <conditions logicalGrouping="MatchAll">
+                    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                    <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                </conditions>
+                <action type="Rewrite" url="/" />
+            </rule>
+        </rules>
+    </rewrite>
+</system.webServer>
+</configuration>
