--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ngx-bootstrap": "^5.3.2",
     "ngx-bootstrap-modal": "^2.0.1",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.4",
+    "primeng": "^9.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
