--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primeng": "^9.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uuid": "^7.0.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
